# ColecciondeEjercicios-STL

./: README.md
Ejercicio 1/: CMakeLists.txt  mates.cpp
Ejercicio 2/: CMakeLists.txt  circulo.cpp  circulo.h  main.cpp  triangulo.cpp  triangulo.h
Ejercicio 3/: CMakeLists.txt  geometria.cpp  geometria.h  main.cpp
Ejercicio 4/: CMakeLists.txt  ciencia.cpp  ciencia.h  main.cpp
Ejercicio 5/: main.cpp
